aks/services/springboot/2_service.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: springboot
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: springboot
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: springboot
        image: yogiman/springboot-playground
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springboot
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: springboot
