aks/services/springboot/1_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springboot
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - springboot.yogiman.cn
    secretName: aks-ingress-tls
  rules:
  - host: springboot.yogiman.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: springboot
          servicePort: 8080
